--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -27,7 +27,7 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/wargame}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:wargame}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:wargame}
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
 
 # ============================
 # REDIS (Railway + Local)
@@ -36,5 +36,12 @@ spring.data.redis.host=${SPRING_DATA_REDIS_HOST:redis}
 spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 spring.data.redis.username=${SPRING_DATA_REDIS_USERNAME:default}
 spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD:redis}
+
+# Railway usa SSL no Redis
+spring.data.redis.ssl.enabled=${SPRING_DATA_REDIS_SSL_ENABLED:true}
+
+# Driver Lettuce
 spring.data.redis.client-type=lettuce
+
+# Habilita redis
 spring.redis.enabled=true
