fix: application changes

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,47 +1,26 @@
 spring.application.name=war-backend
 
-# ============================
-# Swagger
-# ============================
+# Swagger UI
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packagesToScan=com.war.game.war_backend.controller
 springdoc.info.title=War Game Backend API
 springdoc.info.description=API para gerenciar partidas, jogadores e a lógica do jogo War.
 springdoc.info.version=1.0.0
 
-# ============================
 # JWT
-# ============================
-jwt.secret=${JWT_SECRET:fallback-secret}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000000
 
-# ============================
-# SERVER PORT (Railway)
-# ============================
-server.port=${PORT:8080}
-
-# ============================
-# POSTGRES (Railway + Local)
-# ============================
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/wargame}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:wargame}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:wargame}
+# DATABASE CONFIG (Railway)
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# ============================
-# REDIS (Railway + Local)
-# ============================
-spring.data.redis.host=${SPRING_DATA_REDIS_HOST:redis}
-spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
-spring.data.redis.username=${SPRING_DATA_REDIS_USERNAME:default}
-spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD:redis}
-
-# Railway usa SSL no Redis
-spring.data.redis.ssl.enabled=${SPRING_DATA_REDIS_SSL_ENABLED:true}
-
-# Driver Lettuce
-spring.data.redis.client-type=lettuce
-
-# Habilita redis
-spring.redis.enabled=true
+# REDIS CONFIG (Railway)
+spring.data.redis.host=${REDISHOST}
+spring.data.redis.port=${REDISPORT}
+spring.data.redis.username=${REDISUSER}
+spring.data.redis.password=${REDISPASSWORD}
+spring.data.redis.ssl.enabled=${SPRING_DATA_REDIS_SSL_ENABLED}
