--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,7 +12,7 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000000
 
 # DATABASE CONFIG (Railway)
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=none
