--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,13 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000000
 
 # DATABASE CONFIG (Railway)
+# Mantém a conexão dinâmica que já funcionou
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
-spring.jpa.hibernate.ddl-auto=none
+
+# MUDANÇA AQUI: de 'none' para 'update'
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # REDIS CONFIG (Railway)
